--- a/README
+++ b/README
@@ -2,16 +2,11 @@ Recipe
 
 =======================
 Added:
-1. paperclip
+1. previous commit installed spree by 'spree update'
 
 remark:
 
 Using 
->rails g paperclip step image 
-to generate the migration
-
-Use <% unless step.new_record? %> to check if the step not exist in record.
-If you don't have a step record, then rails will create a new step record, therefore, we check by the 'new_record?'
 
 ========================
 
